--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "**/__pycache__": true,
         "**/*.pyc": true,
         "**/*.pyo": true
-    }
+    },
+    "jira-plugin.workingProject": ""
 }
